# tokio-tcp-server-setup-example

./: .env.example  .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
