[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
shared = { path = "../shared"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi"] }
dotenvy = "0.15.7"
futures = "0.3.31"
bytes = "1.7.2"
